change form status colours to enhance readability

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,22 @@ body{
 }
 
 /* ================================================================================================
+                                      contact form
+=================================================================================================== */
+.form-status-error{
+    color:#ff4646;
+    font-weight: 500;
+}
+.form-status-success{
+    color:#4dff8c;
+    font-weight: 500;
+}
+
+.invalid-feedback{
+    color: #ff4646;
+    font-weight: 500;
+}
+/* ================================================================================================
                                       intro banner 
 =================================================================================================== */
 .intro-banner{
